hphp/hack/test/typecheck/coeffects/local/codegen.php
<?hh

function io_disallowed()[codegen]: void {
  echo "bad (missing `IO` capability)"; // error
}
